--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "MgrGracz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
+    "csv-parse": "^5.5.6",
+    "csv-parser": "^3.0.0",
     "discord.js": "^14.15.3"
   }
 }
